// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly at /election 1`] = `
<div>
  <div
    class="sc-bdVaJa cdOnQX"
  >
    <img
      alt="Arlo, by VotingWorks"
      height="60px"
      src="/arlo.png"
    />
    <div
      class="sc-bwzfXH iHMWje"
    >
      <button
        class="sc-htpNat fQFApV"
      >
        Clear & Restart
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly at /election 2`] = `
<div>
  <div
    class="sc-bdVaJa cdOnQX"
  >
    <img
      alt="Arlo, by VotingWorks"
      height="60px"
      src="/arlo.png"
    />
    <div
      class="sc-bwzfXH iHMWje"
    >
      <button
        class="sc-htpNat fQFApV"
      >
        Clear & Restart
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly at /home 1`] = `
<div>
  <div
    class="sc-bdVaJa cdOnQX"
  >
    <img
      alt="Arlo, by VotingWorks"
      class="sc-bxivhb fJGUgW"
      height="60px"
      src="/arlo.png"
    />
  </div>
</div>
`;

exports[`renders correctly at /home 2`] = `
<div>
  <div
    class="sc-bdVaJa cdOnQX"
  >
    <img
      alt="Arlo, by VotingWorks"
      class="sc-bxivhb fJGUgW"
      height="60px"
      src="/arlo.png"
    />
  </div>
</div>
`;
